# youtube-channel-downloader-agent

./: .gitignore  pyproject.toml  render.yaml
web/: app.py
web/static/: index.html
yt_summarize/: cache.py  cli.py  config.py  fetcher.py  history.py  models.py  pipeline.py  renderer.py  summarizer.py  transcript.py
